Linux-iptables.txt
#关闭
iptables -P INPUT DROP 
iptables -P FORWARD DROP 
iptables -P OUTPUT ACCEPT 

#开发本地和局域网
-A INPUT -i local -j ACCEPT
-A INPUT -i eth1 -j ACCEPT
#开放ssh 22 端口给公司,江苏机器
-A INPUT -s 218.94.87.26 -i eth0 -p tcp -m tcp -j ACCEPT 
-A INPUT -s 202.109.129.41 -i eth0 -p tcp -m tcp -j ACCEPT 
-A INPUT -s 221.231.154.0/255.255.255.0 -i eth0 -p tcp -m tcp -j ACCEPT 
-A INPUT -s 221.231.148.192/255.255.255.192 -i eth0 -p tcp -m tcp -j ACCEPT 

#开放80,9021,9090端口
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 9021 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 9090 -j ACCEPT 


#网卡名需要修改

#保存iptables文件
service iptables save
